<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bground"
    tools:context=".LandActivity">

    <!-- AND Image -->
    <ImageView
        android:id="@+id/andImage"
        android:layout_width="326dp"
        android:layout_height="255dp"
        android:src="@drawable/and"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAccessibility="no" />

    <!-- Title: AND Gate -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/and_gate"
        android:textSize="24sp"
        android:textStyle="bold"
        style="@style/GateDescriptionTextStyle"
        app:layout_constraintTop_toBottomOf="@id/andImage"
        app:layout_constraintStart_toStartOf="@id/andImage"
        app:layout_constraintEnd_toEndOf="@id/andImage"
        android:layout_marginTop="16dp"/>

    <!-- Truth Table -->
    <TextView
        android:id="@+id/truthTableTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/truth_table"
        style="@style/GateDescriptionTextStyle"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="@id/andImage"
        app:layout_constraintEnd_toEndOf="@id/andImage"
        android:layout_marginTop="16dp"/>

    <TableLayout
        android:id="@+id/truthTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/andImage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/andImage"
        app:layout_constraintTop_toBottomOf="@id/truthTableTextView"
        tools:ignore="MissingConstraints">

        <TableRow>

            <TextView
                style="@style/GateDescriptionTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/input_a"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                style="@style/GateDescriptionTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/input_b"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                style="@style/GateDescriptionTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/output_y"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                style="@style/GateDescriptionTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/_0"
                android:textSize="15sp"
                android:textAlignment="center" />

            <TextView
                style="@style/GateDescriptionTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/_0"
                android:textSize="15sp"
                android:textAlignment="center" />

            <TextView
                style="@style/GateDescriptionTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/_0"
                android:textSize="15sp"
                android:textAlignment="center" />
        </TableRow>

        <TableRow>

            <TextView
                style="@style/GateDescriptionTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/_0"
                android:textSize="15sp"
                android:textAlignment="center" />

            <TextView
                style="@style/GateDescriptionTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/_1"
                android:textSize="15sp"
                android:textAlignment="center" />

            <TextView
                style="@style/GateDescriptionTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/_0"
                android:textSize="15sp"
                android:textAlignment="center" />
        </TableRow>

        <TableRow>

            <TextView
                style="@style/GateDescriptionTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/_1"
                android:textSize="15sp"
                android:textAlignment="center" />

            <TextView
                style="@style/GateDescriptionTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/_0"
                android:textSize="15sp"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/_1"
                android:textSize="15sp"
                android:textAlignment="center" />
        </TableRow>

        <TableRow android:layout_height="wrap_content">

            <TextView
                style="@style/GateDescriptionTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/_1"
                android:textAlignment="center"
                android:textSize="15sp" />

            <TextView
                style="@style/GateDescriptionTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/_1"
                android:textAlignment="center"
                android:textSize="15sp" />

            <TextView
                style="@style/GateDescriptionTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/_1"
                android:textAlignment="center"
                android:textSize="15sp" />
        </TableRow>

    </TableLayout>

    <!-- Description Paragraph -->
    <TextView
        android:id="@+id/descriptionTextView"
        style="@style/GateDescriptionTextStyle"
        android:layout_width="345dp"
        android:layout_height="247dp"
        android:layout_marginTop="44dp"
        android:text="@string/and_gate_description_paragraph"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="@id/andImage"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/andImage"
        app:layout_constraintTop_toBottomOf="@id/truthTable" />

</androidx.constraintlayout.widget.ConstraintLayout>
